# pushkind-crawlers

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md  pushkind-crawlers.service
.github/workflows/: deploy_dev.yml
plans/: product-category-match.md
specs/features/: product-category-match.md
src/: lib.rs  main.rs
src/crawlers/: gutenberg.rs  mod.rs  rusteaco.rs  tea101.rs  teanadin.rs  wintergreen.rs
src/domain/: product.rs
src/models/: config.rs
src/processing/: benchmark.rs  category.rs  crawler.rs  embedding.rs  mod.rs
src/repository/: benchmark.rs  category.rs  crawler.rs  mod.rs  product.rs
tests/common/: mod.rs
