[package]
name = "pushkind-crawlers"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
env_logger = "0.11.9"
futures = "0.3.32"
html-escape = "0.2.13"
log = "0.4.29"
reqwest = "0.13.2"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
async-trait = "0.1.89"
zmq = "0.10.0"
pushkind-common = { git = "https://github.com/pushkindt/pushkind-common.git", branch = "main", features = [
    "dantes",
] }
diesel = { version = "2.3.6", features = [
    "sqlite",
    "r2d2",
    "chrono",
    "returning_clauses_for_sqlite_3_35",
] }
chrono = { version = "0.4.43", features = ["serde"] }
fastembed = "5.9.0"
bytemuck = "1.25.0"
usearch = "2.24.0"
rand = "0.10.0"
regex = "1.12.3"
config = { version = "0.15.19", default-features = false, features = ["yaml"] }

[dev-dependencies]
tempfile = "3.25.0"
